--- a/HackerRankChalenges/HackerRankChalenges.csproj
+++ b/HackerRankChalenges/HackerRankChalenges.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Challanges\CrackingTheCodeInterview\ArraysAndString\" />
+  </ItemGroup>
+
 </Project>
