--- a/HackerRankChalenges/HackerRankChalenges.csproj
+++ b/HackerRankChalenges/HackerRankChalenges.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Challanges\CrackingTheCodeInterview\ArraysAndString\" />
+    <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
